精简redis限流代码